--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,13 @@ android {
     compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
+    buildTypes.each {
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("app.properties").newDataInputStream())
+        def nasaApiKey = properties.getProperty("NASA_API_KEY", "")
+        it.buildConfigField "String", "NASA_API_KEY", nasaApiKey
+    }
+
     defaultConfig {
         applicationId "com.geekbrains.potd"
         minSdkVersion 24
