--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,10 @@ android {
         it.buildConfigField "String", "NASA_API_KEY", nasaApiKey
     }
 
+    buildFeatures {
+        viewBinding true
+    }
+
     defaultConfig {
         applicationId "com.geekbrains.potd"
         minSdkVersion 24
