--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,20 @@
         <activity
             android:name=".view.MainActivity"
             android:exported="true">
+
         </activity>
 
         <activity
             android:name=".view.api.ApiActivity"
             android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".view.api.ApiBottomActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
