Big cleanup: - removed unused activities, fragments, menus - moved api.* to toplevel - ApiBottonActiviy is now MainActivity - moved earth/mars/system packages from view.api. to fragments. - repository.* is now nasa.*

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Default">
         <activity
-            android:name=".view.MainActivity"
-            android:exported="true">
-
-        </activity>
-
-        <activity
-            android:name=".view.api.ApiActivity"
-            android:exported="true">
-
-        </activity>
-
-        <activity
-            android:name=".view.api.ApiBottomActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
